# vscode-extension

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  TROUBLESHOOTING.md  language-configuration.json  package-lock.json  package.json  test-all-features.py  test-contract.py  test-init-error.py  test-return-hint.py
.claude/skills/: publish.md
.github/workflows/: publish.yml
docs/: INSTALLATION.md  NEW_FEATURES.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  debug_setup.md
images/: ICON_REQUIREMENTS.md
linter/: README.md  pyproject.toml
linter/genvm_linter/: __init__.py  cli.py  output.py
linter/genvm_linter/lint/: __init__.py  linter.py  safety.py  structure.py
linter/genvm_linter/validate/: __init__.py  artifacts.py  sdk_loader.py  validator.py
snippets/: genvm-snippets.json
src/: autocomplete-provider.ts  code-actions-provider.ts  definition-provider.ts  diagnostics-provider.ts  extension.ts  genvm-linter.ts  hover-provider.ts  inlay-hints-provider.ts  signature-provider.ts  simple-ast-parser.ts  type-inference.ts
src/commands/: deploy-command.ts
src/helpers/: dependency-manager.ts  helpers.ts  interactive-process.ts
syntaxes/: genvm-python.tmGrammar.json
tests/fixtures/: examples-advanced-hints.py  examples-type-hints.py  test-hover-links.md
tests/integration/: test-deploy-command.py  test-init-valid.py  test_extension_debug.py
