[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genvm-linter"
version = "0.1.0"
description = "Fast validation and schema extraction for GenLayer intelligent contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "GenLayer Labs" }
]
keywords = ["genlayer", "smart-contracts", "linter", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
genvm-lint = "genvm_linter.cli:cli"

[project.urls]
Homepage = "https://github.com/genlayerlabs/genvm-linter"
Repository = "https://github.com/genlayerlabs/genvm-linter"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
